pyclewn: tracker_id: 1936073: cannot detect the gdb version

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 $Id$
 
 ===============================================================================
+2008-04-09  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+
+	* gdb.py test_gdb.py: Prevent gdb from mistaking a pipe with a tty
+	in gdb_batch()
+
+===============================================================================
 2008-03-22  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
 	* application.py dispatcher.py netbeans.py gdb.py gdbmi.py:
