--- a/INSTALL
+++ b/INSTALL
@@ -6,7 +6,7 @@ REQUIRED:
     gvim:       vim 7.0 or above
                 with the 'netbeans_intg' feature enabled
                 with the 'autocmd' feature enabled
-		(netbeans and autocmd are enabled on most distributions)
+                (netbeans and autocmd are enabled on most distributions)
 
 Note that netbeans does not run on the console vim, you must use gvim.
 
@@ -16,12 +16,12 @@ INSTALL:
 Unpack the tarball, change directory to the distribution directory and
 run the setup script to install pyclewn:
 
-    # tar xzf pyclewn-0.4.tar.gz
-    # cd pyclewn-0.4
-    # python setup.py install
+    tar xzf pyclewn-0.4.tar.gz
+    cd pyclewn-0.4
+    python setup.py install
 
-You can now use the ":help pyclewn" command within vim, to get access to
-the documentation.
+You can now use the ":help pyclewn" command within vim, to access the
+documentation.
 
 
 LOCAL INSTALLATION:
@@ -31,25 +31,18 @@ required to install python packages or to install the vim runtime files on your
 system.
 
 a) Local installation of pyclewn binaries:
-    This is done using the distutils 'home scheme' as follows:
-    (see http://docs.python.org/inst/inst.html):
+    This is done using the distutils 'home scheme' as follows (pyclewn is
+    installed in $HOME/bin):
 
-    $ python setup.py install --home=$HOME
-
-    In that case $HOME/bin must be in your $PATH, and $HOME/lib/python
-    must be in your $PYTHONPATH. When these environment variables are not
-    set, pyclewn can be run as:
-
-    $ PYTHONPATH=$HOME/lib/python $HOME/bin/pyclewn
-
+        python setup.py install --home=$HOME
 
 b) Local installation of the vim runtime files:
     This is done by setting the vimdir environment variable to your
     personal vim runtime directory during installation:
 
-    $ vimdir=$HOME/.vim python setup.py install
+        vimdir=$HOME/.vim python setup.py install
 
 c) Local installation of both pyclewn binaries and the vim runtime files:
 
-    $ vimdir=$HOME/.vim python setup.py install --home=$HOME
+        vimdir=$HOME/.vim python setup.py install --home=$HOME
 
