--- a/README
+++ b/README
@@ -34,7 +34,7 @@ FEATURES:
   key.
 
 * A sequence of gdb commands can be run from a vim script when the
- |async-option|is set. This may be useful in a key mapping.
+  'async' option is set. This may be useful in a key mapping.
 
 * Breakpoints and the line in the current frame are highlighted in the source
   code. Disabled breakpoints are noted with a different highlighting color.
@@ -50,12 +50,12 @@ FEATURES:
   structure or class instance, it can be expanded (resp. folded) to show
   (resp. hide) its members and their values.
 
-* The|project-command|saves the current gdb settings to a project file that
-  may be sourced later by the gdb "source" command. These settings are the
+* The 'project' command saves the current gdb settings to a project file that
+  may be sourced later by the gdb 'source' command. These settings are the
   working directory, the debuggee program file name, the program arguments and
   the breakpoints. The sourcing and saving of the project file can be
   automated to occur on each gdb startup and termination, whith the
- |project-file|command line option.
+  project file command line option.
 
 * Vim command completion on the commands and their first argument.
 
