--- a/NEWS
+++ b/NEWS
@@ -1,15 +1,16 @@
-XXX, 2008 - pyclewn 0.5
+June 6, 2008 - pyclewn 0.5
     New features:
         The new 'maxlines' option sets a limit on the console buffer size.
-        The new 'window' option positions the console window.
+        The new 'window' option positions the console window on top, bottom,
+        left or right side of the Vim window.
         The new 'project' pyclewn command saves the current gdb settings to a
         project file that may be sourced later with the gdb 'source' command.
         These settings are the working directory, the debuggee program file
         name, the program arguments and the breakpoints.
-        A new parameter to the 'gdb' option can be used to set the project file
-        pathname. When set, the project file is automatically sourced on
-        starting a gdb session, and the gdb settings are automatically saved to
-        the project file on quitting gdb or vim.
+        A new parameter to the 'gdb' command line option can be used to set the
+        project file pathname. When set, the project file is automatically
+        sourced on starting a gdb session, and the gdb settings are
+        automatically saved to the project file on quitting gdb or vim.
 
     Changes:
         The vim implementation of the netbeans "remove" function is buggy, and
@@ -19,7 +20,7 @@ XXX, 2008 - pyclewn 0.5
         Allow a gdb command on the initial [No name] vim window.
         Pyclewn can be started now without setting the environment variable
         PYTHONPATH which was required in the previous release when pyclewn is
-        installed with the 'home scheme'.
+        installed locally with the 'home scheme'.
 
     Bug fixes:
         Avoid having Vim segfaults when stepping very fast with gdb, by the
@@ -32,7 +33,7 @@ XXX, 2008 - pyclewn 0.5
         warning him that the buffer is already opened by another Vim session.
 
 
-April  9, 2008 - pyclewn 0.4
+April 9, 2008 - pyclewn 0.4
 
     Bug fix:
         Pyclewn exits with "gdb  CRITICAL this is not a gdb program" when gdb
