--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
-October 24, 2008 - pyclewn 0.7
+November 10, 2008 - pyclewn 0.7
     Changes:
-        Pyclewn falls back to pipes when a pseudo tty with gdb cannot be setup.
+        Pyclewn falls back to pipes when a pseudo tty cannot be setup with gdb.
+        On Vim 7.2 and later Vim versions, the first gdb command on the initial
+        [NoName] buffer is silently ignored. This is fixed by loading the clewn
+        console after netbeans initialisation.
 
     Bug fixes:
         Fix cannot run two simultaneous pyclewn sessions on the same listening
