tracker 2263937: gvim name on pyclewn installation

--- a/INSTALL
+++ b/INSTALL
@@ -23,6 +23,12 @@ run the setup script to install pyclewn:
 You can now use the ":help pyclewn" command within vim, to access the
 documentation.
 
+Note: The pyclewn installer checks the Vim version and checks that Vim has
+been compiled with the 'netbeans_intg' and 'autocmd' features. This is done by
+executing "gvim" as a shell command. Instead of "gvim", it is possible to
+execute a different name or full pathname by setting the environment variable
+'vimcmd' to this value.
+
 
 LOCAL INSTALLATION ON UNIX:
 --------------------------
