--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@ $Id$
 
 2008-10-24  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* pyclewn_install.py __init__.py: The "gvim" name or full pathname can
+	be set on pyclewn installation with the environment variable 'vimcmd'.
+
 	* netbeans.py application.py: Load the clewn console after netbeans
 	initialisation, to enable the first gdb command on the
 	initial [NoName] buffer.
