--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,12 @@
-November 10, 2008 - pyclewn 0.7
+November 15, 2008 - pyclewn 0.7
     Changes:
         Pyclewn falls back to pipes when a pseudo tty cannot be setup with gdb.
         On Vim 7.2 and later Vim versions, the first gdb command on the initial
         [NoName] buffer is silently ignored. This is fixed by loading the clewn
         console after netbeans initialisation.
+        On pyclewn installation, "gvim" can be replaced with the value of the
+        environment variable 'vimcmd', for the program that is run to check
+        that the 'netbeans_intg' feature has been compiled in Vim.
 
     Bug fixes:
         Fix cannot run two simultaneous pyclewn sessions on the same listening
