--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 $Id$
 
-2008-12-26  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2009-01-04  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* misc.py gdb.py gdbmi.py: Ignore gdb/mi log stream records.
 	* simple.py: The symcompletion and sigint commands assert when run in
 	simple.
 	* netbeans.py application.py: Print an error message when a pyclewn
