--- a/NEWS
+++ b/NEWS
@@ -7,8 +7,9 @@ April 4, 2009 - pyclewn 0.7
         line, the user is informed that the buffer is being registered to
         netbeans.
         On pyclewn installation, "gvim" can be replaced with the value of the
-        environment variable 'vimcmd', for the program that is run to check
-        that the 'netbeans_intg' feature has been compiled in Vim.
+        environment variable 'vimcmd', for the pathname of the program to be
+        run when checking that the 'netbeans_intg' feature has been compiled in
+        Vim.
 
     Bug fixes:
         Fix cannot run two simultaneous pyclewn sessions on the same listening
