--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,12 @@
-May 13, 2009 - pyclewn 0.8
+June 29, 2009 - pyclewn 1.0
+    Changes:
+        Clean up the python debugger interface and use pydoc to document it.
+
     Bug fix:
         Recent Fedora Core distributions are missing the Python standard
         library test.regrtest module. Warn that the regression test suite
         cannot be run on these platforms and continue the installation.
+
 
 April 4, 2009 - pyclewn 0.7
     Changes:
