--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 $Id$
 
-2009-06-29  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2009-07-05  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* misc.py: Fix quoted command line arguments are not properly parsed.
 	* vim.py: Replace the `vimcmd` environment variable with the
 	`EDITOR` environment variable.
 	* vim.py gdb.py debugger.py: Jobs and their scheduling time are queued
