--- a/INSTALL
+++ b/INSTALL
@@ -1,82 +1,97 @@
-INSTALL- Pyclewn installation notes
+Pyclewn installation notes
+==========================
 
-REQUIRED:
+Required
 --------
-    python:     python 2.4 or above
-    gvim:       vim 7.0 or above
-                with the 'netbeans_intg' feature enabled
-                with the 'autocmd' feature enabled
-                (netbeans and autocmd are enabled on most distributions)
+
++------------+---------------------------------------+
+| python     | gvim                                  |
++============+=======================================+
+| python 2.4 | Vim 7.0 or above with the             |
+| or above   | **netbeans_intg** feature enabled,    |
+|            | and with the **autocmd** feature      |
+|            | enabled                               |
+|            | (netbeans and autocmd are             |
+|            | enabled on most                       |
+|            | distributions).                       |
++------------+---------------------------------------+
 
 Note that netbeans does not run on the console vim, you must use gvim.
 
-The pyclewn installer checks the Vim version, checks that Vim has been compiled
-with the 'netbeans_intg' and 'autocmd' features, and installs pyclewn help in
-Vim. This is done by executing VIM as a shell command during the installation
-process, with VIM being the value of the 'EDITOR' environment variable or being
-"gvim" if this environment variable does not exist.
-
-
-INSTALL ON UNIX:
+Install on unix
 ---------------
-Unpack the tarball, change directory to the distribution directory and
-run the setup script to install pyclewn:
+
+Unpack the tarball, change directory to the distribution directory and run the
+setup script to install pyclewn::
 
     tar xzf pyclewn-0.7.tar.gz
     cd pyclewn-0.7
     python setup.py install
 
-You can now use the ":help pyclewn" command within vim, to access the
+You can now use the ``:help pyclewn`` command within vim, to get access to the
 documentation.
 
 
-LOCAL INSTALLATION ON UNIX:
+Local installation on unix
 --------------------------
+
 Use a local installation when you do not have root privileges and those are
 required to install python packages or to install the vim runtime files on your
 system.
 
-a) Local installation of pyclewn binaries:
-    This is done using the distutils 'home scheme' as follows (pyclewn is
-    installed in $HOME/bin):
+Pyclewn binaries
+^^^^^^^^^^^^^^^^
 
-        python setup.py install --home=$HOME
+Local installation of the pyclewn binaries is done using the distutils ``home
+scheme`` as follows (pyclewn is installed in $HOME/bin)::
 
-b) Local installation of the vim runtime files:
-    This is done by setting the vimdir environment variable to your
-    personal vim runtime directory during installation:
+    python setup.py install --home=$HOME
 
-        vimdir=$HOME/.vim python setup.py install
+Vim runtime files
+^^^^^^^^^^^^^^^^^
 
-c) Local installation of both pyclewn binaries and the vim runtime files:
+Local installation of the runtime file is done by setting the ``vimdir``
+environment variable set to your personal vim runtime directory during
+installation::
 
-        vimdir=$HOME/.vim python setup.py install --home=$HOME
+    vimdir=$HOME/.vim python setup.py install
 
+Both binaries and runtime
+^^^^^^^^^^^^^^^^^^^^^^^^^
 
-INSTALL ON WINDOWS:
+Local installation of the pyclewn binaries and the runtime file is done with
+the command::
+
+    vimdir=$HOME/.vim python setup.py install --home=$HOME
+
+Install on Windows
 ------------------
+
 Pyclewn is installed with a Windows installer.
 
 The following software must have been installed on Windows:
 
-    * the win32 python package from http://starship.python.net/crew/mhammond/
-    * MinGW and the MinGW components MSYS and gdb from http://www.mingw.org/
+* the win32 python package from http://starship.python.net/crew/mhammond/
+* MinGW and the MinGW components MSYS and gdb from http://www.mingw.org/
 
 Gvim must be in the PATH before starting the installation, otherwise the
 installation will fail. Use the Control Panel on Windows XP to add the gvim
-directory to %PATH%:
+directory to ``%PATH%``::
 
-    Control Panel > System > Advanced tab > Enviroment Variables > Edit "PATH"
+    Control Panel > System > Advanced tab
+    Advanced tab > Enviroment Variables > Edit "PATH"
 
-To install pyclewn, double-click on the installer: pyclewn-0.7.win32.exe.
-This will install pyclewn, configure Vim and create a shortcut on the Desktop.
-The installation is complete after the following message is printed by the
-installer: "pyclewn postinstall completed". You can now use the
-":help pyclewn" command within vim, to access the documentation.
+To install pyclewn, double-click on the installer: pyclewn-0.7.win32.exe. This
+will install pyclewn, configure Vim and create a shortcut on the Desktop. The
+installation is complete after the following message is printed by the
+installer: ``pyclewn postinstall completed``. You can now use the ``:help
+pyclewn`` command within vim, to access the documentation.
 
 You may have to edit the installed shortcut (right-click > Properties) to
 update the gdb full pathname when gdb has not been installed in the standard
 MinGW location.
 
 Pyclewn may be uninstalled with the Control Panel.
+
+.. vim:filetype=rst:tw=78:ts=8:et:
 
