--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,15 @@ News
 Pyclewn 1.0
 -----------
 
-.. August 1st, 2009
+.. August 15, 2009
+
+New features
+^^^^^^^^^^^^
+
+* Split the current Vim window and display the variables window after running
+  the ``Cdbgvar`` command. This feature is enabled when the running Vim
+  version is above 7.2.245 (Vim 7.2 with patch 245).
+
 
 Changes
 ^^^^^^^
